--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="/assets/css/typography.css" />
     <link rel="stylesheet" href="/assets/css/utilities.css" />
 
-    <!-- Components -->
-    <script defer type="module" src="/components/atoms/Button.js"></script>
+    <!-- Index.js -->
+    <script defer type="module" src="/index.js"></script>
   </head>
   
   <body>
