--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="/assets/css/typography.css" />
     <link rel="stylesheet" href="/assets/css/utilities.css" />
 
-    <!-- Index.js -->
+    <!-- JS -->
     <script defer type="module" src="/index.js"></script>
+    <script defer type="module" src="/assets/js/lib.js"></script>
   </head>
 
   <body>
