trying to fix component web path to serve vercel

--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
           <span class="english-course">ENGLISH COURSE</span>
         </div>
         <div class="home__logo__flag__container">
-          <img
-            src="/assets/img/usa-flag.gif"
-            alt="USA flag"
-          />
+          <img src="/assets/img/home/usa-flag.gif" alt="USA flag" />
         </div>
       </div>
       <img
@@ -45,7 +42,7 @@
         class="home__how__image"
       />
       <img
-        src="/assets/img/home/me-computer.png"
+        src="/assets/img/home/me-computer.avif"
         alt="An avatar sticking out of computer"
         class="home__computer__image"
       />
