--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>DAILY BASIS ENGLISH COURSE</title>
 
     <!-- Links -->
-    <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/assets/css/global.css" />
     <link rel="stylesheet" href="/assets/css/reset.css" />
     <link rel="stylesheet" href="/assets/css/variables.css" />
     <link rel="stylesheet" href="/assets/css/typography.css" />
@@ -16,7 +16,14 @@
 
     <!-- JS -->
     <script defer type="module" src="/index.js"></script>
-    <script defer type="module" src="/assets/js/lib.js"></script>
+    <script defer type="module" src="/assets/js/web-components.js"></script>
+
+    <!-- Images -->
+    <link rel="preload" href="/assets/img/home/usa-flag.gif" as="image" />
+    <link rel="preload" href="/assets/img/home/how-you-doing.gif" as="image" />
+    <link rel="preload" href="/assets/img/home/me-computer.avif" as="image" />
+
+    
   </head>
 
   <body>
