--- a/index.html
+++ b/index.html
@@ -62,24 +62,7 @@
         <span class="underline">Reading</span> (Leitura) e
         <span class="underline">Writing</span> (Escrita).
       </p>
-      <wc-icon-list items='[
-      {
-        "list": "Aula individual ou em grupo."
-      },
-      {
-        "list": "Material como áudios, vídeos e exercícios online. Clique aqui (Amostra)."
-      },
-      {
-        "list": "Aulas de 50 minutes ou mais conforme a disponibilidade do aluno e do professor. Clique aqui."
-      },
-      {
-        "list": "Sobre"
-      },
-      {
-        "list": "Preço"
-      }
-    ]'>
-    </wc-icon-list>
+      <wc-icon-list></wc-icon-list>
     </main>
     <hr class="hr-customization" />
     <!-- Footer -->
