--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
           <img src="/assets/img/home/usa-flag.gif" alt="USA flag" />
         </div>
       </div>
-      <img
-        src="/assets/img/home/how-you-doing.gif"
-        alt="How you doing?"
-        class="home__how__image"
-      />
+      <div class="home__phrases__display"></div>
       <img
         src="/assets/img/home/me-computer.avif"
         alt="An avatar sticking out of computer"
@@ -62,7 +58,7 @@
         <span class="underline">Reading</span> (Leitura) e
         <span class="underline">Writing</span> (Escrita).
       </p>
-      <wc-icon-list></wc-icon-list>
+      <wc-icon-list list="aaa"></wc-icon-list>
     </main>
     <hr class="hr-customization" />
     <!-- Footer -->
