--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>DAILY BASIS ENGLISH COURSE</title>
 
     <!-- Links -->
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/assets/css/index.css" />
     <link rel="stylesheet" href="/assets/css/global.css" />
     <link rel="stylesheet" href="/assets/css/reset.css" />
     <link rel="stylesheet" href="/assets/css/variables.css" />
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/assets/css/utilities.css" />
 
     <!-- JS -->
-    <script defer type="module" src="/index.js"></script>
+    <script defer type="module" src="/assets/js/index.js"></script>
     <script defer type="module" src="/assets/js/components.js"></script>
 
     <!-- Images -->
