--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <!-- Header + Buttons-->
     <header>
       <div id="dashboard">
-        <wc-button data-icon="login" id="loginButton"></wc-button>
+        <wc-button data-icon="login" class="left-button" id="loginButton"></wc-button>
       </div>
-      <wc-button data-icon="darkMode"></wc-button>
+      <wc-button data-icon="darkMode" class="right-button"></wc-button>
     </header>
     <!-- Logo + Image -->
     <section class="home__logo__image__container">
