--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
   <body>
     <!-- Header + Buttons-->
     <header>
-      <div id="dashboard">
-        <wc-button data-icon="login" class="left-button" id="loginButton"></wc-button>
-      </div>
-      <wc-button data-icon="darkMode" class="right-button"></wc-button>
+      <wc-header id="dashboard"></wc-header>
     </header>
     <!-- Logo + Image -->
     <section class="home__logo__image__container">
@@ -50,7 +47,6 @@
         class="home__computer__image"
       />
     </section>
-    <wc-layout></wc-layout>
     <!-- Presentation -->
     <main class="home__presentation__container line-break">
       <p>
