--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <p>
         <strong>DAILY BASIS ENGLISH COURSE</strong> oferece aulas especializadas
         na língua Inglesa, fundamentando-se nas quatro habilidades como
-        <span class="underline">Speaking</span> (ênfase em conversação),
-        <span class="underline">Listening</span> (compreensão auditiva),
-        <span class="underline">Reading</span> (Leitura) e
-        <span class="underline">Writing</span> (Escrita).
+        <span class="italic">Speaking</span> (ênfase em conversação),
+        <span class="italic">Listening</span> (compreensão auditiva),
+        <span class="italic">Reading</span> (Leitura) e
+        <span class="italic">Writing</span> (Escrita).
       </p>
       <wc-icon-list
         items='[
