--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
 
     <!-- Links -->
     <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/global.css" />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/variables.css" />
-    <link rel="stylesheet" href="/css/typography.css" />
-    <link rel="stylesheet" href="/css/utilities.css" />
 
     <!-- JS -->
     <script defer type="module" src="/js/index.js"></script>
@@ -20,7 +15,7 @@
     <script defer type="module" src="/js/app.js"></script>
 
     <!-- Images -->
-    <link rel="preload" href="/assets/img/home/usa-flag.gif" as="image" />
+    <!-- <link rel="preload" href="/assets/img/home/usa-flag.gif" as="image" /> -->
     <link rel="preload" href="/assets/img/home/me-computer.avif" as="image" />
   </head>
 
@@ -36,9 +31,9 @@
           <span class="daily-basis">DAILY BASIS</span>
           <span class="english-course">ENGLISH COURSE</span>
         </div>
-        <div class="home__logo__flag__container">
+        <!-- <div class="home__logo__flag__container">
           <img src="/assets/img/home/usa-flag.gif" alt="USA flag" />
-        </div>
+        </div> -->
       </div>
       <div class="home__phrases__display"></div>
       <img
